Fix count comparison in ipa-cp

The existing comparison was incorrect for non-PRECISE counts
(e.g., AFDO): we could end up with a 0 base_count, which could
lead to asserts, e.g., in good_cloning_opportunity_p.

Tested on x86_64-pc-linux-gnu.

gcc/ChangeLog:
	PR ipa/108000
	* ipa-cp.cc (ipcp_propagate_stage): Fix profile count comparison

gcc/testsuite
	* gcc.dg/tree-prof/pr108000.c: Regression test